welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: not found: value y
			setPos(x,y+1)
                                 ^